sast-coverity-check: changes in the generated files
... implied by the recently created subtasks

Related: https://issues.redhat.com/browse/PSSECAUT-1032

--- a/pipelines/docker-build-rhtap/docker-build-rhtap.yaml
+++ b/pipelines/docker-build-rhtap/docker-build-rhtap.yaml
@@ -222,5 +222,6 @@ spec:
       - Merge Request
   workspaces:
   - name: workspace
-  - name: git-auth
+  - name: sast-results
+  - name: netrc
     optional: true
