--- a/pipelines/fbc-builder/fbc-builder.yaml
+++ b/pipelines/fbc-builder/fbc-builder.yaml
@@ -294,6 +294,7 @@ spec:
       values:
       - "false"
   workspaces:
+  - name: sast-results
   - name: git-auth
     optional: true
   - name: netrc
