--- a/pipelines/rhtap/rhtap.yaml
+++ b/pipelines/rhtap/rhtap.yaml
@@ -222,7 +222,8 @@ spec:
       - Merge Request
   workspaces:
   - name: workspace
-  - name: git-auth
+  - name: sast-results
+  - name: netrc
     optional: true
 ---
 apiVersion: tekton.dev/v1
