--- a/pipelines/tekton-bundle-builder-oci-ta/tekton-bundle-builder-oci-ta.yaml
+++ b/pipelines/tekton-bundle-builder-oci-ta/tekton-bundle-builder-oci-ta.yaml
@@ -232,6 +232,7 @@ spec:
       name: apply-tags
       version: "0.1"
   workspaces:
+  - name: sast-results
   - name: git-auth
     optional: true
   - name: netrc
