--- a/pipelines/tekton-bundle-builder/tekton-bundle-builder.yaml
+++ b/pipelines/tekton-bundle-builder/tekton-bundle-builder.yaml
@@ -228,6 +228,7 @@ spec:
       version: "0.1"
   workspaces:
   - name: workspace
+  - name: sast-results
   - name: git-auth
     optional: true
   - name: netrc
