--- a/renovate.json
+++ b/renovate.json
@@ -95,6 +95,7 @@
         "task/fips-operator-bundle-check-oci-ta/**",
         "task/fips-operator-bundle-check/**",
         "task/inspect-image/**",
+        "task/sast-coverity-check-build-oci-ta/**",
         "task/sast-coverity-check-build/**",
         "task/sast-coverity-check-oci-ta/**",
         "task/sast-coverity-check-upload/**",
