--- a/pipelines/maven-zip-build/maven-zip-build.yaml
+++ b/pipelines/maven-zip-build/maven-zip-build.yaml
@@ -165,17 +165,23 @@ spec:
     workspaces:
     - name: workspace
       workspace: workspace
-  - name: sast-coverity-check
-    params:
-    - name: image-digest
-      value: $(tasks.build-oci-artifact.results.IMAGE_URL)
-    - name: image-url
-      value: $(tasks.build-image-index.results.IMAGE_URL)
+  - name: coverity-availability-check
+    runAfter:
+    - build-oci-artifact
+    taskRef:
+      name: coverity-availability-check
+      version: "0.2"
+    when:
+    - input: $(params.skip-checks)
+      operator: in
+      values:
+      - "false"
+  - name: sast-coverity-check-build
     runAfter:
     - coverity-availability-check
     taskRef:
-      name: sast-coverity-check
-      version: "0.3"
+      name: sast-coverity-check-build
+      version: "0.4"
     when:
     - input: $(params.skip-checks)
       operator: in
@@ -188,17 +194,44 @@ spec:
     workspaces:
     - name: source
       workspace: workspace
-  - name: coverity-availability-check
+    - name: sast-results
+      workspace: sast-results
+  - name: sast-coverity-check
     runAfter:
-    - build-oci-artifact
+    - sast-coverity-check-build
     taskRef:
-      name: coverity-availability-check
-      version: "0.2"
+      name: sast-coverity-check
+      version: "0.4"
     when:
     - input: $(params.skip-checks)
       operator: in
       values:
       - "false"
+    workspaces:
+    - name: source
+      workspace: workspace
+    - name: sast-results
+      workspace: sast-results
+  - name: sast-coverity-check-upload
+    params:
+    - name: image-digest
+      value: $(tasks.build-oci-artifact.results.IMAGE_DIGEST)
+    - name: image-url
+      value: $(tasks.build-oci-artifact.results.IMAGE_URL)
+    runAfter:
+    - build-image-index
+    - sast-coverity-check
+    taskRef:
+      name: sast-coverity-check-upload
+      version: "0.4"
+    when:
+    - input: $(params.skip-checks)
+      operator: in
+      values:
+      - "false"
+    workspaces:
+    - name: sast-results
+      workspace: sast-results
   - name: sast-shell-check
     params:
     - name: image-digest
@@ -221,11 +254,11 @@ spec:
   - name: sast-unicode-check
     params:
     - name: image-digest
-      value: $(tasks.build-oci-artifact.results.IMAGE_URL)
+      value: $(tasks.build-oci-artifact.results.IMAGE_DIGEST)
     - name: image-url
-      value: $(tasks.build-image-index.results.IMAGE_URL)
+      value: $(tasks.build-oci-artifact.results.IMAGE_URL)
     runAfter:
-    - build-oci-artifact
+    - build-image-index
     taskRef:
       name: sast-unicode-check
       version: "0.2"
@@ -239,6 +272,7 @@ spec:
       workspace: workspace
   workspaces:
   - name: workspace
+  - name: sast-results
   - name: git-auth
     optional: true
   - name: netrc
