--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -534,6 +534,7 @@ spec:
           # user is not running registration in the Containerfile: pre-register.
           echo "Pre-registering with subscription manager."
           subscription-manager --debug=DEBUG register --org "$(cat /tmp/activation-key/org)" --activationkey "$(cat /tmp/activation-key/activationkey)"
+          cat /var/log/rhsm/rhsm.log || true
           trap 'subscription-manager unregister || true' EXIT
 
           # copy generated certificates to /shared volume
