--- a/task/tkn-bundle-oci-ta/0.1/tkn-bundle-oci-ta.yaml
+++ b/task/tkn-bundle-oci-ta/0.1/tkn-bundle-oci-ta.yaml
@@ -28,10 +28,6 @@ spec:
       description: The Trusted Artifact URI pointing to the artifact with
         the application source code.
       type: string
-    - name: SOURCE_CODE_DIR
-      description: Source code directory in the working dir
-      type: string
-      default: source
     - name: STEPS_IMAGE
       description: An optional image to configure task steps with in the bundle
       type: string
@@ -52,7 +48,7 @@ spec:
       - name: HOME
         value: $(params.HOME)
       - name: SOURCE_CODE_DIR
-        value: $(params.SOURCE_CODE_DIR)
+        value: source
       - name: TASK_FILE
         value: tekton_task_files
     volumeMounts:
