sast-coverity-check: avoid tracing `dnf --installroot`
... because it would break the build due to unreachable `/tmp/idir`
in the chroots:
```
@0s: "$@" --> sh -c 'mkdir /stage/ && dnf install --installroot /stage/ --setop install_weak_deps=false --nodocs -y zlib openssl && dnf clean all --installroot /stage/'
[...]
Running scriptlet: glibc-2.34-125.el9_5.3.x86_64 11/38[ERROR] capture (open bl): cannot write /tmp/idir/build-log.txt: No such file or directory
[ERROR] capture (open bl): cannot write /tmp/idir/build-log.txt: No such file or directory
```

Resolves: https://issues.redhat.com/browse/PSSECAUT-1051

--- a/task/sast-coverity-check/0.2/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.2/sast-coverity-check.yaml
@@ -294,6 +294,11 @@ spec:
         fi
       fi
 
+      # the COVERITY_* environment variables and their effective values can be found in /tmp/idir/build-log.txt after the capture
+
+      # avoid tracing "dnf --installroot" because it would break the build due to unreachable /tmp/idir in the chroot
+      export COVERITY_DISENGAGE_EXES="dnf;microdnf;yum"
+
       # always remove Coverity's intermediate directory so that it can be recreated with different ownership
       trap 'rm -fr /tmp/idir' EXIT
 
