sast-coverity-check: always use a fresh temp directory for Coverity
... to avoid "Permission denied" errors on reuse:
```
[INFO] Executing command: /opt/coverity/bin/cov-manage-emit --dir /tmp/idir create
Could not create the directory /tmp/cov-autotune/a07709a38f999a67bcff1973a6df1e8f: Permission denied
```

Resolves: https://issues.redhat.com/browse/KFLUXSPRT-2270

--- a/task/sast-coverity-check/0.2/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.2/sast-coverity-check.yaml
@@ -299,6 +299,9 @@ spec:
       # avoid tracing "dnf --installroot" because it would break the build due to unreachable /tmp/idir in the chroot
       export COVERITY_DISENGAGE_EXES="dnf;microdnf;yum"
 
+      # always use a fresh temp directory for Coverity to avoid "Permission denied" errors on reuse
+      export COVERITY_TEMP="\$(mktemp -d /tmp/cov-XXXXXXXX)"
+
       # always remove Coverity's intermediate directory so that it can be recreated with different ownership
       trap 'rm -fr /tmp/idir' EXIT
 
