document that PRIVILEGED_NESTED should be used only with remote VMs
KONFLUX-7422

tSigned-off-by: Robert Cerven <rcerven@redhat.com>

--- a/task/buildah-remote-oci-ta/0.3/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.3/buildah-remote-oci-ta.yaml
@@ -82,7 +82,8 @@ spec:
     name: PREFETCH_INPUT
     type: string
   - default: "false"
-    description: Whether to enable privileged mode
+    description: Whether to enable privileged mode, should be used only with remote
+      VMs
     name: PRIVILEGED_NESTED
     type: string
   - default: cyclonedx
