--- a/task/buildah-remote/0.3/buildah-remote.yaml
+++ b/task/buildah-remote/0.3/buildah-remote.yaml
@@ -120,7 +120,8 @@ spec:
     name: LABELS
     type: array
   - default: "false"
-    description: Whether to enable privileged mode
+    description: Whether to enable privileged mode, should be used only with remote
+      VMs
     name: PRIVILEGED_NESTED
     type: string
   - default: "false"
