--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -111,7 +111,7 @@ spec:
     type: array
     default: []
   - name: PRIVILEGED_NESTED
-    description: Whether to enable privileged mode
+    description: Whether to enable privileged mode, should be used only with remote VMs
     type: string
     default: "false"
   - name: SKIP_SBOM_GENERATION
