--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -112,7 +112,8 @@ spec:
       type: string
       default: ""
     - name: PRIVILEGED_NESTED
-      description: Whether to enable privileged mode
+      description: Whether to enable privileged mode, should be used only
+        with remote VMs
       type: string
       default: "false"
     - name: PROJECT_NAME
