--- a/task/buildah-min/0.2/buildah-min.yaml
+++ b/task/buildah-min/0.2/buildah-min.yaml
@@ -121,7 +121,8 @@ spec:
     name: LABELS
     type: array
   - default: "false"
-    description: Whether to enable privileged mode
+    description: Whether to enable privileged mode, should be used only with remote
+      VMs
     name: PRIVILEGED_NESTED
     type: string
   - default: "false"
