--- a/task/buildah-oci-ta/0.2/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.2/buildah-oci-ta.yaml
@@ -84,7 +84,8 @@ spec:
       type: string
       default: ""
     - name: PRIVILEGED_NESTED
-      description: Whether to enable privileged mode
+      description: Whether to enable privileged mode, should be used only
+        with remote VMs
       type: string
       default: "false"
     - name: SKIP_SBOM_GENERATION
