--- a/task/sast-coverity-check/0.2/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.2/sast-coverity-check.yaml
@@ -122,7 +122,8 @@ spec:
     name: ANNOTATIONS
     type: array
   - default: "false"
-    description: Whether to enable privileged mode
+    description: Whether to enable privileged mode, should be used only with remote
+      VMs
     name: PRIVILEGED_NESTED
     type: string
   - default: "false"
