update tkn-bundle owners
Update tkn-bundle owners:
Add avi-biton, gbenhaim and yftacherzog

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -41,8 +41,8 @@
 /task/generate-labels   @konflux-ci/build-maintainers @ralphbean
 
 # renovate groupName=ec
-/task/tkn-bundle                    @konflux-ci/ec
-/task/tkn-bundle-oci-ta             @konflux-ci/ec
+/task/tkn-bundle                    @konflux-ci/ec @avi-biton @gbenhaim @yftacherzog
+/task/tkn-bundle-oci-ta             @konflux-ci/ec @avi-biton @gbenhaim @yftacherzog
 /task/verify-enterprise-contract    @konflux-ci/ec
 /pipelines/enterprise-contract.yaml @konflux-ci/ec
 /.tekton/tasks/ec-checks.yaml       @konflux-ci/ec
