chore(KFLUXVNGD-239):create oci-ta version of tekton-bundle-builder
Create an oci-ta version of the tekton-bundle-builder pipeline

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/pipelines/kustomization.yaml
+++ b/pipelines/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
 - enterprise-contract.yaml
 - fbc-builder
 - tekton-bundle-builder
+- tekton-bundle-builder-oci-ta
 - maven-zip-build
 - maven-zip-build-oci-ta
