fix(KFLUXVNGD-267): tkn-bundle task fails when the context is a file
Update the task to add the workspace and source dir to the file

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/task/tkn-bundle-oci-ta/0.1/tkn-bundle-oci-ta.yaml
+++ b/task/tkn-bundle-oci-ta/0.1/tkn-bundle-oci-ta.yaml
@@ -97,7 +97,7 @@ spec:
             )
           else
             # for files add the file to the collected paths
-            paths+=("${path}")
+            paths+=("/var/workdir/${SOURCE_CODE_DIR}/${path}")
           fi
           if [[ $neg == 0 ]]; then
             # collect current paths to FILES
