--- a/task/tkn-bundle/0.1/tkn-bundle.yaml
+++ b/task/tkn-bundle/0.1/tkn-bundle.yaml
@@ -79,7 +79,7 @@ spec:
           )
         else
           # for files add the file to the collected paths
-          paths+=("${path}")
+          paths+=("$(workspaces.source.path)/${SOURCE_CODE_DIR}/${path}")
         fi
         if [[ $neg == 0 ]]; then
           # collect current paths to FILES
