--- a/pipelines/docker-build/patch.yaml
+++ b/pipelines/docker-build/patch.yaml
@@ -80,6 +80,8 @@
       - $(params.build-args[*])
   - name: BUILD_ARGS_FILE
     value: "$(params.build-args-file)"
+  - name: BUILDAH_FORMAT
+    value: $(params.buildah-format)
 
 # FIXME: duplicate the "add" operations for sast-coverity-check, which is based on build-container
 - op: test
