--- a/pipelines/maven-zip-build/patch.yaml
+++ b/pipelines/maven-zip-build/patch.yaml
@@ -29,7 +29,10 @@
 #      9  image-expires-after
 #     10  build-source-image
 #     11  build-image-index
+#     12  buildah-format
 
+- op: remove
+  path: /spec/params/12  # buildah-format
 - op: remove
   path: /spec/params/11  # build-image-index
 - op: remove
@@ -83,7 +86,7 @@
   path: /spec/tasks/5  # build-source-image
 - op: remove
   path: /spec/tasks/4  # build-image-index
-# Replace builda task by build-maven-zip task
+# Replace buildah task by build-maven-zip task
 - op: replace
   path: /spec/tasks/3
   value:
