run-script-oci-ta: fix .metadata.name
The .metadata.name in run-script-oci-ta.yaml doesn't match the filename.
Because of that, the CI gets confused:

- The create-task-pipeline-bundle-repos.sh script reads the name from
  the yaml, creates quay.io/konflux-ci/tekton-catalog/task-run-script
- The build-and-push.sh script takes the name from the file name, pushes
  to quay.io/konflux-ci/tekton-catalog/task-run-script-oci-ta. Pushing
  to a non-existent repo creates it as private. The script then fails to
  read from the private repo.

Fix the run-script-oci-ta task name in the yaml metadata to make sure
both the scripts will use the same name.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
+++ b/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
@@ -2,7 +2,7 @@
 apiVersion: tekton.dev/v1
 kind: Task
 metadata:
-  name: run-script
+  name: run-script-oci-ta
   annotations:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
