add to task sast-unicode-check,  image-digest param and bump version to 0.2      - copying the sast-unicode-check/0.2 directory and the version to become 0.2      - added the parameter image-digest and added it to the oras attach image url      - updated README related      - updated reltad pipelines accordingly
Signed-off-by: Kasem Alem <kalem@redhat.com>

--- a/pipelines/maven-zip-build-oci-ta/maven-zip-build-oci-ta.yaml
+++ b/pipelines/maven-zip-build-oci-ta/maven-zip-build-oci-ta.yaml
@@ -211,6 +211,8 @@ spec:
     workspaces: []
   - name: sast-unicode-check
     params:
+    - name: image-digest
+      value: $(tasks.build-oci-artifact.results.IMAGE_DIGEST)
     - name: image-url
       value: $(tasks.build-oci-artifact.results.IMAGE_URL)
     - name: SOURCE_ARTIFACT
@@ -221,7 +223,7 @@ spec:
     - build-oci-artifact
     taskRef:
       name: sast-unicode-check-oci-ta
-      version: "0.1"
+      version: "0.2"
     when:
     - input: $(params.skip-checks)
       operator: in
