--- a/pipelines/maven-zip-build/patch.yaml
+++ b/pipelines/maven-zip-build/patch.yaml
@@ -143,6 +143,9 @@
 # Replace the params set and runAfter of sast-unicode-check
 - op: replace
   path: /spec/tasks/8/params/0/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_DIGEST)"
+- op: replace
+  path: /spec/tasks/8/params/1/value
   value: "$(tasks.build-oci-artifact.results.IMAGE_URL)"
 - op: replace
   path: /spec/tasks/8/runAfter
