--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -296,11 +296,13 @@ spec:
         - build-image-index
       taskRef:
         name: sast-unicode-check
-        version: "0.1"
+        version: "0.2"
       workspaces:
         - name: workspace
           workspace: workspace
       params:
+        - name: image-digest
+          value: $(tasks.build-image-index.results.IMAGE_DIGEST)
         - name: image-url
           value: $(tasks.build-image-index.results.IMAGE_URL)
     - name: apply-tags
