add image-digest to oras attach with image-url
Signed-off-by: Kasem Alem <kalem@redhat.com>

--- a/pipelines/core-services/core-services.yaml
+++ b/pipelines/core-services/core-services.yaml
@@ -392,6 +392,8 @@ spec:
       - "false"
   - name: sast-coverity-check
     params:
+    - name: image-digest
+      value: $(tasks.build-image-index.results.IMAGE_DIGEST)
     - name: image-url
       value: $(tasks.build-image-index.results.IMAGE_URL)
     - name: IMAGE
@@ -417,7 +419,7 @@ spec:
     - coverity-availability-check
     taskRef:
       name: sast-coverity-check
-      version: "0.2"
+      version: "0.3"
     when:
     - input: $(params.skip-checks)
       operator: in
