--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -250,8 +250,10 @@ spec:
         - coverity-availability-check
       taskRef:
         name: sast-coverity-check
-        version: "0.2"
+        version: "0.3"
       params:
+        - name: image-digest
+          value: $(tasks.build-image-index.results.IMAGE_DIGEST)
         - name: image-url
           value: $(tasks.build-image-index.results.IMAGE_URL)
       workspaces:
