Set build-source-image param default to true
When a new component is onboarded, it's likely it will immediately
fail the Conforma/EC check because the source image is required.

Let's save some time and effort and make the source image built by
default.

Notes:
* There maybe be a good reason that I'm not aware of why this hasn't
  been done already, but I figured I'd make a PR anyhow to kick off
  the discussion.

* I'm not sure what tests will need to be modified due to this change,
  but let's see what happens in the PR.

* The pipelines/template-build/template-build.yaml file was the one
  edited manually, all the other changes are in the generated files,
  updated by running hack/build-manifests.sh.

Ref: https://issues.redhat.com/browse/STONEBLD-3473

--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -51,7 +51,7 @@ spec:
     - name: build-source-image
       description: Build a source image.
       type: string
-      default: "false"
+      default: "true"
     - name: build-image-index
       description: Add built image into an OCI image index
       type: string
