updating renovate config to exclude older preflight tasks from updates
Signed-off-by: Adam D. Cornett <adc@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -109,9 +109,19 @@
     },
     {
       "groupName": "preflight",
+      "description": "contains the group of current active preflight tasks",
       "matchFileNames": [
         "task/ecosystem-cert-preflight-checks/**"
-      ]
+      ],
+      "enabled": true
+    },
+    {
+      "groupName": "preflight-deprecated",
+      "description": "contains the group of preflight tasks that no longer work in the konflux ecosystem with the latest preflight container image",
+      "matchFileNames": [
+        "task/ecosystem-cert-preflight-checks/0.1/**"
+      ],
+      "enabled": false
     },
     {
       "groupName": "github-actions",
