feat(STONEINTG-1163): retry oc image extract
* Add retry to oc image extract since it need to connect to quay.io
and meet intermittent issue sometimes

Signed-off-by: Hongwei Liu <hongliu@redhat.com>

--- a/task/clamav-scan/0.1/clamav-scan.yaml
+++ b/task/clamav-scan/0.1/clamav-scan.yaml
@@ -90,7 +90,7 @@ spec:
             arch_imageanddigest=$(echo $imagewithouttag@$arch_sha)
 
             echo "Running \"oc image extract\" on image of arch $arch"
-            oc image extract --registry-config ~/.docker/config.json $arch_imageanddigest --path="/:${destination}" --filter-by-os="linux/${arch}"
+            retry oc image extract --registry-config ~/.docker/config.json "$arch_imageanddigest" --path="/:${destination}" --filter-by-os="linux/${arch}"
             if [ $? -ne 0 ]; then
               echo "Unable to extract image for arch $arch. Skipping ClamAV scan!"
               exit 0
