--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -400,6 +400,16 @@ spec:
       chown root:root /var/lib/containers
 
       sed -i 's/^\s*short-name-mode\s*=\s*.*/short-name-mode = "disabled"/' /etc/containers/registries.conf
+      cat << 'EOF' >> /etc/containers/registries.conf
+      [[registry]]
+      prefix   = "registry.redhat.io"
+      location = "registry.redhat.io"
+
+        [[registry.mirror]]
+        location = "redhat.stage.registry.io"
+        insecure = false
+        mirror-by-digest-only = false
+      EOF
 
       # Setting new namespace to run buildah - 2^32-2
       echo 'root:1:4294967294' | tee -a /etc/subuid >>/etc/subgid
