--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -406,7 +406,7 @@ spec:
       location = "registry.redhat.io"
 
         [[registry.mirror]]
-        location = "redhat.stage.registry.io"
+        location = "registry.stage.redhat.io"
         insecure = false
         mirror-by-digest-only = false
       EOF
